# calc-rs

./: Cargo.toml  README.md
calc-core/: Cargo.toml
calc_core/: Cargo.toml
calc_core/src/: lib.rs
calc_terminal/: Cargo.toml
calc_terminal/src/: draw.rs  main.rs
src/: draw.rs  main.rs
